# sced

./: .gitignore  CMakeLists.txt  README.md  build.sh
libs/macos/: README.md
src/: main.cpp
src/Application/: Application.cpp  Application.h
src/Math/: MathOps.h
src/Renderer/: CircleShape.hpp  EllipseShape.hpp  IShape2D.hpp  RectangleShape.hpp  RegularPolygonShape.hpp  Renderer2D.cpp  Renderer2D.hpp  ShapeRecord.hpp  Shapes.hpp  Transform.hpp  Vertex2D.hpp
src/Renderer/Shader/: Shader.cpp  Shader.hpp
src/Renderer/Shader/config/: flat.frag  flat.vert
src/Renderer/Shapes/: CircleShape.hpp  EllipseShape.hpp  IShape2D.hpp  RectangleShape.hpp  RegularPolygonShape.hpp
src/color/: SColor.hpp
src/converter/: SCArch.cpp
src/core/: Canvas.hpp  Window.cpp  Window.h
src/core/buffers/: BufferData.cpp  BufferData.h  SC_VBO.cpp  SC_VBO.h
src/input/: Input.cpp  Input.h  ScreenToWorld.hpp
src/math/: MathOps.h
src/objects/: Attribute.h  Mesh.h  SCObject.cpp  SCObject.hpp  Triangle.h  Vertex.h
src/parser/: SCparse.cpp  SCparse.hpp
src/scene/: LayerStack.hpp
src/tests/: New_Paint.cpp  Numbers.cpp  Paint_Test.cpp  Pong.cpp  SCparseTests.cpp  Simon.cpp  Test_SCObjectShapes.cpp
src/tests/New_Paint_Test/: PaintLayer.cpp  PaintLayer.h
src/tests/data/: sample_shapes.json
src/ui/: FrameState.hpp  UIManager.hpp
src/ui/elements/: SCButton.cpp  SCButton.hpp
